# calendar

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  pytest.ini
instance/: db.sqlite
model/adrs/: fingerprint-auth.md  template.md
timetable/: __init__.py
timetable/models/: timetable.py
timetable/scripts/: generate_schema.py
timetable/static/: app.js  index.html  style.css
timetable/tests/: conftest.py  helpers.py  test_events.py  test_health.py
timetable/views/: routes.py
