[project]
name = "calendar"
version = "0.1.0"
description = ""
authors = [
    {name = "Cailin Delgado",email = "c.delgado@uqconnect.edu.au"}
]
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
