[project]
name = "missionary-calendar"
version = "0.1.0"
description = ""
authors = [{ name = "Cailin Delgado", email = "c.delgado@uqconnect.edu.au" }]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "phonenumbers (>=9.0.29,<10.0.0)",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.uv.build-backend]
module-name = "timetable"
module-root = ""
